# port-libjpeg-turbo

./: .gitignore  README.md  all_cves.json  test-original.sh
safe/: Cargo.toml  README.md  build.rs
safe/.cargo/: config.toml
safe/bridge/: libjpeg_compat.c
safe/cmake/: libjpeg-turboConfig.cmake.in  libjpeg-turboConfigVersion.cmake.in  libjpeg-turboTargets.cmake.in
safe/crates/ffi-types/: Cargo.toml
safe/crates/jpeg-core/: Cargo.toml
safe/crates/jpeg-tools/: Cargo.toml  build.rs
safe/crates/libjpeg-abi/: Cargo.toml  build.rs
safe/crates/libturbojpeg-abi/: Cargo.toml  build.rs
safe/debian/: cjpeg.1  control  jpegtran.1  libjpeg-turbo-only.symbols  libjpeg-turbo-progs.install  libjpeg-turbo8-dev.docs  libjpeg-turbo8-dev.examples  libjpeg-turbo8-dev.install  libjpeg-turbo8.lintian-overrides  libturbojpeg-java.install  libturbojpeg.lintian-overrides  libturbojpeg.symbols  rdjpgcom.1  rules  tjbench.1.in
safe/debian/extra/: exifautotran  exifautotran.1  (+1 more)
safe/include/: install-manifest.txt
safe/link/: libjpeg.map  turbojpeg-mapfile  turbojpeg-mapfile.jni
safe/pkgconfig/: libturbojpeg.pc.in
safe/scripts/: audit-unsafe.sh  check-symbols.sh  debian_symbols.py  original-object-groups.json  relink-original-objects.sh  run-bench-smoke.sh  run-compat-fixtures.sh  run-debian-autopkgtests.sh  run-dependent-regressions.sh  run-dependent-subset.sh  run-java-tests.sh  run-progs-smoke.sh  stage-install.sh
safe/src/: lib.rs
safe/tests/: compat_smoke.rs  cve_regressions.rs  dependent_regressions.rs  layout_ctest.rs  turbojpeg_suite.rs  upstream_matrix.rs
(+110 files in other folders)
